# aoc2025

./: .gitignore
day01/src/: main.rs
day02/: build.zig
day02-zig/: build.zig.zon
day02/src/: part1.zig  part2.zig
day03/: main.go
day03-go/: main.go  part1.go  part2.go
day04/: CMakeLists.txt
day04-cpp/include/: input.h
day04-cpp/src/: main.cpp  part1.cpp
day04/include/: input.h  part1.h  part2.h
day04/src/: input.cpp  main.cpp  part1.cpp  part2.cpp
day05/: part1.ml  part2.ml
day06-swift/: Package.swift
day06-swift/Sources/Part1/: main.swift
day06-swift/Sources/Part2/: main.swift
day07-ocaml/: part1.ml  part2.ml
day08-rust/: Cargo.toml
day08-rust/src/: main.rs  part1.rs  part2.rs
day09-rust/: Cargo.toml
day09-rust/src/: part1.rs  part2.rs
day1/src/: main.rs
day10-rust/: Cargo.toml
day10-rust/src/: main.rs  part1.rs  part2.rs
